Revert "Added reset-password and forgot-password UI pages"

--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
-    "analytics": "44034221-b71d-4e39-b8c9-7fe9605aaf5f"
+    "analytics": false
   },
   "version": 1,
   "newProjectRoot": "projects",
