--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,7 @@
-
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  
   "compileOnSave": false,
   "compilerOptions": {
-      
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
@@ -21,16 +19,12 @@
     "lib": [
       "es2018",
       "dom"
-    ],
-    
-     
-    
+    ]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true,
-     
+    "strictTemplates": true
   }
 }
