created After login Create Admin module and Integrate All API's (Design Admin Dashboard)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,6 @@
-
 {
-  
   "compileOnSave": false,
   "compilerOptions": {
-      
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
@@ -21,16 +18,13 @@
     "lib": [
       "es2018",
       "dom"
-    ],
-    
-     
-    
+    ]
+
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true,
-     
+    "strictTemplates": true
   }
 }
