--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.1.3",
-    "chart.js": "^2.9.4",
+    "chart.js": "^4.5.1",
     "minimatch": "^10.1.1",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
@@ -34,6 +34,7 @@
     "@angular-devkit/build-angular": "~12.2.18",
     "@angular/cli": "~12.2.18",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/chart.js": "^4.0.1",
     "@types/jasmine": "~3.8.0",
     "@types/minimatch": "^6.0.0",
     "@types/node": "^12.11.1",
